--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@
 
 .button {
     width: 90%;
-    height: 5%;
+    height: 50px;
     border: none;
     background-color: rgb(15, 15, 15);
     color: white;
